--- a/donation/templates/registration/login.html
+++ b/donation/templates/registration/login.html
@@ -1,10 +1,15 @@
 {%extends 'base.html'%}
 {%load static%}
-
+{% block head-css-file%}
+<link rel="stylesheet" href="{% static 'css/style2.css'%}" />
+{%endblock%}
+{%block slogan%}
+{%endblock%}
 {%block content%}
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form method="post">
+        {% csrf_token %}
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" />
         </div>
@@ -14,8 +19,8 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
-          <button class="btn" type="submit">Zaloguj się</button> 
+          <a href="#" class="btn btn--without-border">Załóż konto</a>
+          <button class="btn" type="submit">Zaloguj się</button>
         </div>
       </form>
     </section>
