--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -847,7 +847,7 @@ form.form--contact textarea::placeholder {
   color: #3c3c3c;
 }
 
-/*!* line 2, scss/modules/_header.scss *!*/
+/* line 2, scss/modules/_header.scss */
 /*header.header--main-page {*/
 /*  background-image: url(../images/header-bg.jpg);*/
 /*  background-position: bottom left -30vh;*/
