--- a/donation/templates/base.html
+++ b/donation/templates/base.html
@@ -11,7 +11,9 @@
     {%endblock%}
   </head>
   <body>
+   {%block header%}
     <header class="header--main-page">
+   {%endblock%}
       <nav class="container container--70">
         <ul class="nav--actions">
           {% block sidebar%}
@@ -26,7 +28,7 @@
           <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
           <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
           <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="form.html" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="{%url 'form'%}" class="btn btn--without-border">Przekaż dary</a></li>
           <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
@@ -41,6 +43,7 @@
         </div>
         {%endblock%}
       </div>
+
     </header>
 
    {%block content%}
