--- a/donation/templates/base.html
+++ b/donation/templates/base.html
@@ -17,17 +17,28 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           {% block sidebar%}
-          <li><a href="" class="btn btn--small btn--without-border">Zaloguj</a></li>
+            {%if user.is_authenticated%}
+            <li class="logged-user">
+            Witaj {{user.get_short_name}}
+            <ul class="dropdown">
+              <li><a href="#">Profil</a></li>
+              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{%url 'logout'%}">Wyloguj</a></li>
+            </ul>
+            {%else%}
+          </li>
+          <li><a href="{%url 'login'%}" class="btn btn--small btn--without-border">Zaloguj</a></li>
           <li><a href="{% url 'register'%}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+            {%endif%}
           {%endblock%}
         </ul>
 
 
         <ul>
-          <li><a href="" class="btn btn--without-border active">Start</a></li>
-          <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{%url 'index'%}" class="btn btn--without-border active">Start</a></li>
+          <li><a href="{%url 'index'%}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{%url 'index'%}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{%url 'index'%}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
           <li><a href="{%url 'form'%}" class="btn btn--without-border">Przekaż dary</a></li>
           <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
@@ -72,6 +83,6 @@
       </div>
     </footer>
 
-    <script src="js/app.js"></script>
+    <script src="{% static 'js/app.js'%}"></script>
   </body>
 </html>
