--- a/donation/templates/register.html
+++ b/donation/templates/register.html
@@ -12,25 +12,16 @@
       <form method="post">
         {%csrf_token%}
         <div class="form-group">
-          <input type="text" name="name" placeholder="Imię" />
+          {{form.as_p}}
         </div>
-         <div class="form-group">
-          <input type="text" name="surname" placeholder="Nazwisko" />
-        </div>
-        <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
-        </div>
-        <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
-        </div>
-        <div class="form-group">
-          <input type="password" name="password2" placeholder="Powtórz hasło" />
-        </div>
-
         <div class="form-group form-group--buttons">
           <a href="{%url 'login'%}" class="btn btn--without-border">Zaloguj się</a>
           <button class="btn" type="submit">Załóż konto</button>
         </div>
       </form>
     </section>
+
+{%if msg%}
+{{msg}}
+{%endif%}
 {%endblock%}
