LoginView updated, redirect to register.html

--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -114,7 +114,7 @@
 
           <!-- STEP 3 -->
           <div data-step="3">
-            <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+            <h3>Wybierz organizację, której chcesz pomóc:</h3>
             {%for institution in institutions%}
 
             <div class="form-group form-group--checkbox">
