--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -73,7 +73,7 @@
             {%for category in categories%}
             <div class="form-group form-group--checkbox">
               <label>
-                <input
+                <input id="category"
                   type="checkbox"
                   name="categories"
                   value="{{category.pk}}"
@@ -100,7 +100,7 @@
             <div class="form-group form-group--inline">
               <label>
                 Liczba 60l worków:
-                <input type="number" name="bags" step="1" min="1" />
+                <input id="quantity" type="number" name="bags" step="1" min="1" />
               </label>
             </div>
 
@@ -116,10 +116,9 @@
           <div data-step="3">
             <h3>Wybierz organizację, której chcesz pomóc:</h3>
             {%for institution in institutions%}
-
             <div class="form-group form-group--checkbox">
               <label>
-                <input type="radio" name="organization" value="{{institution.pk}}" />
+                <input id="institution" type="radio" name="organization" value="{{institution.pk}}" />
                 <span class="checkbox radio"></span>
                 <span class="description">
                   <div class="title">{{institution.name}}</div>
@@ -129,6 +128,7 @@
                 </span>
               </label>
             </div>
+
             {%endfor%}
 
 
@@ -146,22 +146,22 @@
               <div class="form-section--column">
                 <h4>Adres odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Ulica <input type="text" name="address" /> </label>
+                  <label> Ulica <input id="street" type="text" name="address" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Miasto <input type="text" name="city" /> </label>
+                  <label> Miasto <input id="city" type="text" name="city" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Kod pocztowy <input type="text" name="postcode" />
+                    Kod pocztowy <input id="postcode" type="text" name="postcode" />
                   </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Numer telefonu <input type="phone" name="phone" />
+                    Numer telefonu <input id="phone" type="phone" name="phone" />
                   </label>
                 </div>
               </div>
@@ -169,17 +169,17 @@
               <div class="form-section--column">
                 <h4>Termin odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Data <input type="date" name="data" /> </label>
+                  <label> Data <input id="data" type="date" name="data" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Godzina <input type="time" name="time" /> </label>
+                  <label> Godzina <input id="hour" type="time" name="time" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
                     Uwagi dla kuriera
-                    <textarea name="more_info" rows="5"></textarea>
+                    <textarea id="comments" name="more_info" rows="5"></textarea>
                   </label>
                 </div>
               </div>
