form submit with ajax

--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -64,14 +64,14 @@
       <div class="form--steps-container">
         <div class="form--steps-counter">Krok <span>1</span>/5</div>
 
-        <form action="form-confirmation.html" method="post">
+        <form action="form-confirmation.html" method="post" id="form-send">
           {%csrf_token%}
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
             <h3>Zaznacz co chcesz oddać:</h3>
 
             {%for category in categories%}
-            <div class="form-group form-group--checkbox">
+            <div id='MyDiv' class="form-group form-group--checkbox">
               <label>
                 <input id="category"
                   type="checkbox"
@@ -189,6 +189,9 @@
               <button type="button" class="btn next-step">Dalej</button>
             </div>
           </div>
+          {%if msg%}
+          {{msg}}
+          {%endif%}
 
           <!-- STEP 6 -->
           <div data-step="5">
