--- a/donation/templates/form-confirmation.html
+++ b/donation/templates/form-confirmation.html
@@ -1,22 +1,13 @@
 {%extends 'base.html'%}
 {%load static%}
 
-          {%block sidebar%}
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-          {%endblock%}
+
 
 
 
         {%block slogan%}
           <h2>
-            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
+            Dziękujemy za przesłanie formularza. Na maila prześlemy wszelkie
             informacje o odbiorze.
           </h2>
         {%endblock%}
