form sending fixed

--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -108,8 +108,6 @@
             </div>
           </div>
 
-
-
           <!-- STEP 3 -->
           <div data-step="3">
             <h3>Wybierz organizację, której chcesz pomóc:</h3>
@@ -121,16 +119,13 @@
                 <span class="description">
                   <div class="title">{{radio.choice_label}}</div>
                   <div class="subtitle">
-                    Cel i misja: {{form.institution_description}}
+
+                    Cel i misja: {{form.description}}
                   </div>
                 </span>
               </label>
               {%endfor%}
             </div>
-
-
-
-
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
@@ -140,7 +135,7 @@
 
           <!-- STEP 4 -->
           <div data-step="4">
-            <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
+            <h3>Podaj adres oraz termin odbioru rzeczy przez kuriera:</h3>
 
             <div class="form-section form-section--columns">
               <div class="form-section--column">
