--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -104,27 +104,26 @@
 
             <div class="form-group form-group--buttons">
               <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
+              <button id="btnInst" type="button" class="btn next-step">Dalej</button>
             </div>
           </div>
 
           <!-- STEP 3 -->
           <div data-step="3">
             <h3>Wybierz organizację, której chcesz pomóc:</h3>
-            <div class="form-group form-group--checkbox">
-              {%for radio in form.institution %}
-              <label for="{{ radio.id_for_label }}">
-                {{ radio.tag }}
+            <div id="institutions-div" class="form-group form-group--checkbox">
+
+              <label>
+                <input type="radio" name="institution"/>
                 <span class="checkbox radio"></span>
                 <span class="description">
-                  <div class="title">{{radio.choice_label}}</div>
-                  <div class="subtitle">
-
-                    Cel i misja: {{radio.choice_description}}
+                  <div id="org-name" class="title"></div>
+                  <div id="org-descrp" class="subtitle">
+                    Cel i misja:
                   </div>
                 </span>
               </label>
-              {%endfor%}
+
             </div>
 
             <div class="form-group form-group--buttons">
