querystring -ajax get institutions

--- a/donation/templates/form.html
+++ b/donation/templates/form.html
@@ -84,8 +84,6 @@
             </div>
 
 
-
-
             <div class="form-group form-group--buttons">
               <button type="button" class="btn next-step">Dalej</button>
             </div>
@@ -112,18 +110,7 @@
           <div data-step="3">
             <h3>Wybierz organizację, której chcesz pomóc:</h3>
             <div id="institutions-div" class="form-group form-group--checkbox">
-
-              <label>
-                <input type="radio" name="institution"/>
-                <span class="checkbox radio"></span>
-                <span class="description">
-                  <div id="org-name" class="title"></div>
-                  <div id="org-descrp" class="subtitle">
-                    Cel i misja:
-                  </div>
-                </span>
-              </label>
-
+              <!--data loaded with Ajax-->
             </div>
 
             <div class="form-group form-group--buttons">
