--- a/donation/templates/profil.html
+++ b/donation/templates/profil.html
@@ -12,13 +12,43 @@
 <div>
     <h2>Dane użytkownika:</h2>
     <ul class="help--slides-items">
-        <div class="title">
+        <div id="profil" class="title">
             <p><b>Imię:</b> {{user.name}}</p>
             <p><b>Nazwisko:</b> {{user.last_name}}</p>
             <p><b>Email:</b> {{user.email}}</p>
         </div>
     </ul>
 </div>
+</section>
+<section class="login-page">
+    <div>
+        <h1>Przekazane dary:</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <td>ile worków</td>
+                    <td>kategoria darów</td>
+                    <td>obdarowana organizacja</td>
+                    <td>data odbioru daru</td>
+                    <td> czy dar został juz odebrany</td>
+                </tr>
+            </thead>
+            <tbody>
+                {%for donation in donations%}
+                <tr>
+
+                    <td>{{donation.quantity}}</td>
+                    <td>{%for category in donation.categories.all%}
+                    <ul>{{category.name}}</ul>
+                    {%endfor%}</td>
+                    <td>{{donation.institution}}</td>
+                    <td>{{donation.pick_up_date| date:'Y-m-d'}}</td>
+                </tr>
+                {%endfor%}
+            </tbody>
+
+        </table>
+    </div>
 </section>
 
 {%endblock%}
