--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -1830,3 +1830,24 @@ footer .bottom-line--icons a img {
 
 .phone-field-ext { display: none; }
 #id_phone_1 {display: none;}
+
+.table th, td  {
+    border-bottom: 1px solid #ddd;
+    padding: 15px;
+    text-align: left;
+    font-size: 1.5em;
+}
+.table tr:hover {background-color: #f5f5f5;}
+
+.table thead {
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  padding: 15px;
+  text-emphasis: #3c3c3c;
+
+}
+
+#profil {
+  font-size: 2em;
+}
