--- a/donation/templates/base.html
+++ b/donation/templates/base.html
@@ -23,7 +23,7 @@
             Witaj {{user.get_short_name}}
             <ul class="dropdown">
               <li><a href="{%url 'profil'%}">Profil</a></li>
-              <li><a href="#">Ustawienia</a></li>
+              <li><a href="{%url 'update' %}">Ustawienia</a></li>
                 {%if request.user.is_admin%}
               <li><a href="/admin/">Panel administracyjny</a></li>
                 {%endif%}
