password.html updated

--- a/templates/password.html
+++ b/templates/password.html
@@ -15,7 +15,16 @@
     <form method="post">
         {%csrf_token%}
         <div class="form-group">
-        {{form.as_p}}
+            <label for="{{form.old_password.label}}">Stare hasło:</label>
+        {{form.old_password}}
+        </div>
+        <div class="form-group">
+            <label for="{{form.new_password1.label}}">Nowe hasło:</label>
+            {{form.new_password1}}
+        </div>
+        <div class="form-group">
+            <label for="{{form.new_password2.label}}">Powtórz hasło:</label>
+            {{form.new_password2}}
         </div>
 
           <button class="btn" type="submit">Zmień hasło</button>
@@ -26,7 +35,7 @@
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
