--- a/templates/password.html
+++ b/templates/password.html
@@ -15,29 +15,48 @@
     <form method="post">
         {%csrf_token%}
         <div class="form-group">
-            <label for="{{form.old_password.label}}">Stare hasło:</label>
-        {{form.old_password}}
-        </div>
-        <div class="form-group">
-            <label for="{{form.new_password1.label}}">Nowe hasło:</label>
-            {{form.new_password1}}
-        </div>
-        <div class="form-group">
-            <label for="{{form.new_password2.label}}">Powtórz hasło:</label>
-            {{form.new_password2}}
-        </div>
+        <table class="profile">
+            <tr>
+                <td>
+                    <label for="{{form.old_password.label}}">Stare hasło:</label>
+                </td>
+                <td>
+                    {{form.old_password}}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="{{form.new_password1.label}}">Nowe hasło:</label>
+                </td>
+                <td>
+                    {{form.new_password1}}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="{{form.new_password2.label}}">Powtórz hasło:</label>
+                </td>
+                <td>
+                    {{form.new_password2}}
+                </td>
+            </tr>
 
+
+        </table>
+        </div>
+        <div class="form-group form-group--buttons">
           <button class="btn" type="submit">Zmień hasło</button>
+        </div>
     </form>
 </section>
 
 <section class="login-page">
 {% if messages %}
-<ul class="messages">
+<div class="messages">
     {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }}</li>
+    {{ message }}
     {% endfor %}
-</ul>
+</div>
 {% endif %}
 </section>
 {%endblock%}
